--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.0.0"
 description = "Hello World program written in Rust"
 license = "MIT"
 repository = "https://github.com/altersabeh/hello-world"
+homepage = "https://github.com/altersabeh/hello-world/tree/main/rust#README"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
