--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 
 [[bin]]
 name = "rust-hello"
-path = "src/hello.rs"
+path = "src/hello_world.rs"
 
 [dependencies]
 chrono = "0.4.37"
