--- a/gradle/gradle/libs.versions.toml
+++ b/gradle/gradle/libs.versions.toml
@@ -2,6 +2,8 @@
 kotlin = "1.9.23"
 apache-lang3 = "3.14.0"
 junit-platform = "1.10.2"
+gradle-lint = "19.0.1"
+ktlint = "12.1.0"
 
 [libraries]
 commons-lang3 = { module = "org.apache.commons:commons-lang3", version.ref = "apache-lang3" }
@@ -10,4 +12,6 @@ kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotl
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 
 [plugins]
+gradle-lint = { id = "nebula.lint", version.ref = "gradle-lint" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
