--- a/dotnet/Directory.Build.props
+++ b/dotnet/Directory.Build.props
@@ -1,5 +1,17 @@
 <Project>
+
   <PropertyGroup>
     <VSTestVerbosity>normal</VSTestVerbosity>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <RepoRoot>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))</RepoRoot>
+    <ProjectRelativePath>$([MSBuild]::MakeRelative($(RepoRoot), $(MSBuildProjectDirectory)))</ProjectRelativePath>
+    <BaseOutputPath>$(RepoRoot)dist/$(ProjectRelativePath)/bin</BaseOutputPath>
+    <OutputPath>$(BaseOutputPath)</OutputPath>
+    <BaseIntermediateOutputPath>$(RepoRoot)dist/$(ProjectRelativePath)/obj</BaseIntermediateOutputPath>
+    <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
+    <PackageOutputPath>$(RepoRoot)dist/$(ProjectRelativePath)/package</PackageOutputPath>
+  </PropertyGroup>
+  
 </Project>
