--- a/.editorconfig
+++ b/.editorconfig
@@ -3,3 +3,8 @@ root = true
 [*]
 indent_size = 4
 indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[{*.csproj,*.sln}]
+indent_size = 2
