--- a/.editorconfig
+++ b/.editorconfig
@@ -6,5 +6,5 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[{*.csproj,*.sln}]
+[{*.csproj,*.sln,*.swift}]
 indent_size = 2
