changed package structure

--- a/cargo/Cargo.toml
+++ b/cargo/Cargo.toml
@@ -14,8 +14,10 @@ name = "cargo-hello"
 path = "src/main.rs"
 
 [lib]
-path = "src/hello_world.rs"
+path = "src/lib.rs"
 doctest = false
 
 [dependencies]
 chrono = "0.4.37"
+num-bigint = "0.4.4"
+rand = "0.8.5"
