--- a/dotnet/src/NumbersLib/NumbersLib.csproj
+++ b/dotnet/src/NumbersLib/NumbersLib.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
-    <AssemblyName>HelloWorld</AssemblyName>
+    <AssemblyName>NumbersLib</AssemblyName>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
