--- a/cargo/Cargo.toml
+++ b/cargo/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["crates/*"]
+members = ["crates/*", "."]
 
 [workspace.package]
 version = "1.0.0"
@@ -18,6 +18,7 @@ rand = "0.8.5"
 rstest = "0.18.2"
 numbers-lib = { path = "crates/numbers-lib" }
 translator = { path = "crates/translator" }
+cargo-hello = { path = "." }
 
 [package]
 name = "cargo-hello"
@@ -28,19 +29,35 @@ repository.workspace = true
 homepage.workspace = true
 edition.workspace = true
 keywords.workspace = true
+default-run = "cargo-hello"
+
+[lib]
+path = "src/lib.rs"
+doctest = false
+test = false
 
 [[bin]]
 name = "cargo-hello"
-path = "src/main.rs"
 test = false
 
 [[bin]]
 name = "banner"
 test = false
 
-[lib]
-path = "src/lib.rs"
-doctest = false
+[[bin]]
+name = "number"
+test = false
+
+[[bin]]
+name = "greeter"
+test = false
+
+[[bin]]
+name = "details"
+test = false
+
+[[bin]]
+name = "random"
 test = false
 
 [dependencies]
