--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,8 @@
 {
     "files.exclude": {
-        "**/.build": true,
-        "**/.gradle": true,
-        "**/build": true,
-        "**/dist": true,
-        "**/dotnet/**/bin": true,
-        "**/obj": true,
-        "**/target": true,
+        "*/**": true
     },
     "files.watcherExclude": {
-        "**/.build": true,
-        "**/.gradle": true,
-        "**/build": true,
-        "**/dist": true,
-        "**/dotnet/**/bin": true,
-        "**/obj": true,
-        "**/target": true,
-    },
+        "*/**": true
+    }
 }
