--- a/cabal/cabal-hello.cabal
+++ b/cabal/cabal-hello.cabal
@@ -21,6 +21,19 @@ source-repository head
     type:     git
     location: https://github.com/altersabeh/hello-world
 
+library
+    exposed-modules:
+
+        Hello.World
+        Goodbye.World
+
+    hs-source-dirs:   src
+    default-language: GHC2021
+    ghc-options:      -Wall
+    build-depends:
+        base ^>=4.18.2.0,
+        time ^>=1.12.2
+
 library goodbye-world
     exposed-modules:  Goodbye.World
     hs-source-dirs:   src
@@ -43,6 +56,30 @@ library hello-world
         base ^>=4.18.2.0,
         time ^>=1.12.2
 
+library cli-function
+    exposed-modules:
+        CLI.Function.Banner
+        CLI.Function.Details
+        CLI.Function.Greeter
+        CLI.Function.Number
+        CLI.Function.Random
+
+    hs-source-dirs:   src
+    other-modules:
+        Paths_cabal_hello
+        Hello.World
+        Goodbye.World
+
+    autogen-modules:  Paths_cabal_hello
+    default-language: GHC2021
+    ghc-options:      -Wall
+    build-depends:
+        cabal-hello,
+        base ^>=4.18.2.0,
+        time ^>=1.12.2,
+        numbers-lib ^>=1.0.0,
+        translator ^>=1.0.0
+
 executable cabal-hello
     main-is:          Main.hs
     hs-source-dirs:   app
@@ -54,11 +91,63 @@ executable cabal-hello
     default-language: GHC2021
     ghc-options:      -Wall
     build-depends:
-        base ^>=4.18.2.0,
-        cabal-hello:hello-world,
-        cabal-hello:goodbye-world,
-        numbers-lib ^>=1.0.0,
-        translator ^>=1.0.0
+        cabal-hello:cli-function,
+        base ^>=4.18.2.0
+
+executable banner
+    main-is:          Command/Banner.hs
+    hs-source-dirs:   app
+    other-modules:    Paths_cabal_hello
+    autogen-modules:  Paths_cabal_hello
+    default-language: GHC2021
+    ghc-options:      -Wall
+    build-depends:
+        cabal-hello:cli-function,
+        base ^>=4.18.2.0
+
+executable details
+    main-is:          Command/Details.hs
+    hs-source-dirs:   app
+    other-modules:    Paths_cabal_hello
+    autogen-modules:  Paths_cabal_hello
+    default-language: GHC2021
+    ghc-options:      -Wall
+    build-depends:
+        cabal-hello:cli-function,
+        base ^>=4.18.2.0
+
+executable greeter
+    main-is:          Command/Greeter.hs
+    hs-source-dirs:   app
+    other-modules:    Paths_cabal_hello
+    autogen-modules:  Paths_cabal_hello
+    default-language: GHC2021
+    ghc-options:      -Wall
+    build-depends:
+        cabal-hello:cli-function,
+        base ^>=4.18.2.0
+
+executable number
+    main-is:          Command/Number.hs
+    hs-source-dirs:   app
+    other-modules:    Paths_cabal_hello
+    autogen-modules:  Paths_cabal_hello
+    default-language: GHC2021
+    ghc-options:      -Wall
+    build-depends:
+        cabal-hello:cli-function,
+        base ^>=4.18.2.0
+
+executable random
+    main-is:          Command/Random.hs
+    hs-source-dirs:   app
+    other-modules:    Paths_cabal_hello
+    autogen-modules:  Paths_cabal_hello
+    default-language: GHC2021
+    ghc-options:      -Wall
+    build-depends:
+        cabal-hello:cli-function,
+        base ^>=4.18.2.0
 
 test-suite hello-world-test
     type:             exitcode-stdio-1.0
@@ -67,8 +156,8 @@ test-suite hello-world-test
     default-language: GHC2021
     ghc-options:      -Wall
     build-depends:
-        base ^>=4.18.2.0,
         cabal-hello:hello-world,
+        base ^>=4.18.2.0,
         time ^>=1.12.2,
         tasty ^>=1.4.3,
         tasty-hunit ^>=0.10.1
@@ -80,8 +169,8 @@ test-suite goodbye-world-test
     default-language: GHC2021
     ghc-options:      -Wall
     build-depends:
-        base ^>=4.18.2.0,
         cabal-hello:goodbye-world,
+        base ^>=4.18.2.0,
         time ^>=1.12.2,
         tasty ^>=1.4.3,
         tasty-hunit ^>=0.10.1
