--- a/cargo/crates/translator/Cargo.toml
+++ b/cargo/crates/translator/Cargo.toml
@@ -18,3 +18,5 @@ rand = { workspace = true }
 
 [dev-dependencies]
 rstest = { workspace = true }
+colored = { workspace = true }
+chrono = { workspace = true }
