--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# cabal
+**/dist-newstyle
+
 # cargo
 **/target
 
@@ -8,6 +11,9 @@
 # gradle
 **/build
 **/.gradle
+
+# stack
+**/.stack-work
 
 # swift
 **/.build
