--- a/gradle/gradle/libs.versions.toml
+++ b/gradle/gradle/libs.versions.toml
@@ -1,17 +1,19 @@
+[plugins]
+dep-check = { id = "com.github.ben-manes.versions", version.ref = "dep-check" }
+dep-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "dep-check" }
+kotlin = "org.jetbrains.kotlin.jvm:2.0.0-Beta5"
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
+
 [versions]
-kotlin = "1.9.23"
 apache-lang3 = "3.14.0"
+dep-check = "0.51.0"
+dep-update = "0.8.0"
 junit-platform = "1.10.2"
-gradle-lint = "19.0.1"
+kotlin = "1.9.23"
 ktlint = "12.1.0"
 
 [libraries]
 commons-lang3 = { module = "org.apache.commons:commons-lang3", version.ref = "apache-lang3" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version.ref = "junit-platform" }
-kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-
-[plugins]
-gradle-lint = { id = "nebula.lint", version.ref = "gradle-lint" }
-kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
+kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
