--- a/cabal/cabal-hello.cabal
+++ b/cabal/cabal-hello.cabal
@@ -27,7 +27,7 @@ library
         Hello.World
         Goodbye.World
 
-    hs-source-dirs:   src
+    hs-source-dirs:   srcc
     default-language: GHC2021
     ghc-options:      -Wall
     build-depends:
@@ -77,7 +77,7 @@ library cli-function
         cabal-hello,
         base ^>=4.18.2.0,
         time ^>=1.12.2,
-        numbers-lib ^>=1.0.0,
+        numbers-utils ^>=1.0.0,
         translator ^>=1.0.0
 
 executable cabal-hello
