--- a/cabal/packages/numbers-utils/numbers-lib.cabal
+++ b/cabal/packages/numbers-utils/numbers-lib.cabal
@@ -1,5 +1,5 @@
 cabal-version:   3.4
-name:            numbers-lib
+name:            numbers-utils
 version:         1.0.0.0
 build-type:      Simple
 
@@ -8,10 +8,10 @@ source-repository head
     location: https://github.com/altersabeh/hello-world
 
 library
-    exposed-modules:  Numbers.Lib
+    exposed-modules:  Numbers.Utils
     hs-source-dirs:   src
-    other-modules:    Paths_numbers_lib
-    autogen-modules:  Paths_numbers_lib
+    other-modules:    Paths_numbers_utils
+    autogen-modules:  Paths_numbers_utils
     default-language: GHC2021
     ghc-options:      -Wall
     build-depends:
@@ -21,26 +21,26 @@ library
 executable factorial
     main-is:          Factorial.hs
     hs-source-dirs:   app
-    other-modules:    Paths_numbers_lib
-    autogen-modules:  Paths_numbers_lib
+    other-modules:    Paths_numbers_utils
+    autogen-modules:  Paths_numbers_utils
     default-language: GHC2021
     ghc-options:      -Wall
     build-depends:
         base ^>=4.18.2.0,
-        numbers-lib
+        numbers-utils
 
 executable fibonacci
     main-is:          Fibonacci.hs
     hs-source-dirs:   app
-    other-modules:    Paths_numbers_lib
-    autogen-modules:  Paths_numbers_lib
+    other-modules:    Paths_numbers_utils
+    autogen-modules:  Paths_numbers_utils
     default-language: GHC2021
     ghc-options:      -Wall
     build-depends:
         base ^>=4.18.2.0,
-        numbers-lib
+        numbers-utils
 
-test-suite numbers-lib-test
+test-suite numbers-utils-test
     type:             exitcode-stdio-1.0
     main-is:          NumbersLibTests.hs
     hs-source-dirs:   tests
@@ -48,7 +48,7 @@ test-suite numbers-lib-test
     ghc-options:      -Wall
     build-depends:
         base ^>=4.18.2.0,
-        numbers-lib,
+        numbers-utils,
         random ^>=1.2.1.2,
         tasty ^>=1.4.3,
         tasty-hunit ^>=0.10.1,
