--- a/cabal/cabal-hello.cabal
+++ b/cabal/cabal-hello.cabal
@@ -77,7 +77,7 @@ library cli-function
         cabal-hello,
         base ^>=4.18.2.0,
         time ^>=1.12.2,
-        numbers-lib ^>=1.0.0,
+        numbers_utils ^>=1.0.0,
         translator ^>=1.0.0
 
 executable cabal-hello
