--- a/dotnet/src/Hello.World/HelloWorld.csproj
+++ b/dotnet/src/Hello.World/HelloWorld.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <IsPackable>false</IsPackable>
     <AssemblyName>HelloWorld</AssemblyName>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>$(SdkTargetFramework)</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
