--- a/dotnet/tests/Hello.World.Tests/HelloWorldTests.csproj
+++ b/dotnet/tests/Hello.World.Tests/HelloWorldTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>$(SdkTargetFramework)</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <Using Include="Xunit" />
-    <ProjectReference Include="../../src/HelloWorld/HelloWorld.csproj" />
+    <ProjectReference Include="../../src/Hello.World/HelloWorld.csproj" />
   </ItemGroup>
 
 </Project>
