--- a/gradle/gradle/libs.versions.toml
+++ b/gradle/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [plugins]
 dep-check = { id = "com.github.ben-manes.versions", version.ref = "dep-check" }
-dep-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "dep-check" }
+dep-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "dep-update" }
 kotlin = "org.jetbrains.kotlin.jvm:2.0.0-Beta5"
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
 [versions]
 apache-lang3 = "3.14.0"
 dep-check = "0.51.0"
-dep-update = "0.8.0"
+dep-update = "0.8.4"
 junit-platform = "1.10.2"
 kotlin = "1.9.23"
 ktlint = "12.1.0"
