--- a/dotnet/modules/Numbers.Utils/Numbers.Utils.Lib/NumbersUtils.csproj
+++ b/dotnet/modules/Numbers.Utils/Numbers.Utils.Lib/NumbersUtils.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
-    <AssemblyName>NumbersLib</AssemblyName>
+    <AssemblyName>NumbersUtils</AssemblyName>
     <TargetFramework>$(SdkTargetFramework)</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
