--- a/dotnet/Directory.Build.props
+++ b/dotnet/Directory.Build.props
@@ -1,12 +1,20 @@
 <Project>
 
   <PropertyGroup>
+    <Version>1.0.0</Version>
+    <Authors>AlterSabeh</Authors>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/altersabeh/hello-world</RepositoryUrl>
+    <SdkTargetFramework>net8.0</SdkTargetFramework>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <VSTestVerbosity>normal</VSTestVerbosity>
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageVersion>1.0.0</PackageVersion>
-    <SdkTargetFramework>net8.0</SdkTargetFramework>
     <RepoRoot>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)'))</RepoRoot>
     <ProjectRelativePath>$([MSBuild]::MakeRelative($(RepoRoot), $(MSBuildProjectDirectory)))</ProjectRelativePath>
     <BaseOutputPath>$(RepoRoot)artifacts/$(ProjectRelativePath)/bin</BaseOutputPath>
@@ -14,8 +22,6 @@
     <BaseIntermediateOutputPath>$(RepoRoot)artifacts/$(ProjectRelativePath)/obj</BaseIntermediateOutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
     <PackageOutputPath>$(RepoRoot)artifacts/$(ProjectRelativePath)/package</PackageOutputPath>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
 </Project>
