--- a/cabal/packages/hello-cabal/hello-world.cabal
+++ b/cabal/packages/hello-cabal/hello-world.cabal
@@ -16,4 +16,4 @@ executable hello-cabal
     ghc-options:      -Wall
     build-depends:
         base ^>=4.18.2.0,
-        cabal-hello
+        cabal-hello:hello-world
