--- a/cargo/crates/numbers-utils/Cargo.toml
+++ b/cargo/crates/numbers-utils/Cargo.toml
@@ -22,6 +22,7 @@ test = false
 
 [dependencies]
 num-bigint = { workspace = true }
+num-traits = { workspace = true }
 rand = { workspace = true }
 
 [dev-dependencies]
