--- a/cargo/crates/numbers-utils/Cargo.toml
+++ b/cargo/crates/numbers-utils/Cargo.toml
@@ -20,6 +20,10 @@ test = false
 name = "fibonacci"
 test = false
 
+[[bin]]
+name = "factor"
+test = false
+
 [dependencies]
 num-bigint = { workspace = true }
 num-traits = { workspace = true }
