--- a/cabal/packages/numbers-utils/numbers-utils.cabal
+++ b/cabal/packages/numbers-utils/numbers-utils.cabal
@@ -61,6 +61,7 @@ test-suite operations-test
     main-is:          OperationsTests.hs
     hs-source-dirs:   tests
     other-modules:
+        Operations.FactorUtilsTests
         Operations.FactorialUtilsTests
         Operations.FibonacciUtilsTests
 
