--- a/cabal/cabal.project
+++ b/cabal/cabal.project
@@ -1,5 +1,8 @@
 packages:
-    *.cabal
-    packages/**/*.cabal
+  *.cabal
+  packages/**/*.cabal
 
 test-show-details: direct
+
+program-options
+  ghc-options: -haddock
