--- a/dotnet/modules/Numbers.Utils/Numbers.Utils.Operations/Fibonacci.Utils/FibonacciUtils.csproj
+++ b/dotnet/modules/Numbers.Utils/Numbers.Utils.Operations/Fibonacci.Utils/FibonacciUtils.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
-    <AssemblyName>NumbersUtils</AssemblyName>
+    <AssemblyName>$([System.IO.Path]::GetFileName($(MSBuildProjectDirectory)))</AssemblyName>
     <TargetFramework>$(SdkTargetFramework)</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
 </Project>
