--- a/dotnet/modules/Numbers.Utils/Numbers.Utils.Tests/Operations.Tests/OperationsTests.csproj
+++ b/dotnet/modules/Numbers.Utils/Numbers.Utils.Tests/Operations.Tests/OperationsTests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>$(SdkTargetFramework)</TargetFramework>
+    <AssemblyName>$([System.IO.Path]::GetFileName($(MSBuildProjectDirectory)))</AssemblyName>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -11,13 +12,14 @@
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="xunit" Version="2.5.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="NUnit" Version="3.14.0" />
+    <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="Xunit" />
-    <ProjectReference Include="../Numbers.Utils.Lib/NumbersUtils.csproj" />
+    <Using Include="NUnit.Framework" />
+    <ProjectReference Include="../../Numbers.Utils.Operations/*/*.csproj" />
   </ItemGroup>
 
 </Project>
