--- a/dotnet/Directory.Build.props
+++ b/dotnet/Directory.Build.props
@@ -7,7 +7,7 @@
     <RepositoryUrl>https://github.com/altersabeh/hello-world</RepositoryUrl>
     <SdkTargetFramework>net8.0</SdkTargetFramework>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageReadmeFile>$(RepoRoot)README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup>
