--- a/dotnet/Directory.Build.targets
+++ b/dotnet/Directory.Build.targets
@@ -1,9 +1,9 @@
 <Project>
 
   <ItemGroup>
-    <None Include="..\..\README.md" Pack="true" PackagePath="\"/>
-    <None Include="..\..\CHANGELOG.md" Pack="true" PackagePath="\"/>
-    <None Include="..\..\LICENSE.md" Pack="true" PackagePath="\"/>
+    <None Include="$(RepoRoot)README.md" Pack="true" PackagePath="\"/>
+    <None Include="$(RepoRoot)CHANGELOG.md" Pack="true" PackagePath="\"/>
+    <None Include="$(RepoRoot)LICENSE.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
