--- a/cargo/crates/date-today/Cargo.toml
+++ b/cargo/crates/date-today/Cargo.toml
@@ -13,4 +13,4 @@ name = "date-today"
 path = "src/custom/date_today.rs"
 
 [dependencies]
-cargo-hello = {workspace = true}
+prog = {workspace = true}
