--- a/cargo/Cargo.toml
+++ b/cargo/Cargo.toml
@@ -20,10 +20,10 @@ rand = "0.8.5"
 rstest = "0.18.2"
 numbers-utils = { path = "crates/numbers-utils" }
 translator = { path = "crates/translator" }
-cargo-hello = { path = "." }
+prog = { path = "." }
 
 [package]
-name = "cargo-hello"
+name = "prog"
 version.workspace = true
 description = "Hello World program in Cargo"
 license.workspace = true
@@ -40,6 +40,7 @@ test = false
 
 [[bin]]
 name = "cargo-hello"
+path = "src/main.rs"
 test = false
 
 [[bin]]
