--- a/gradle/.vscode/settings.json
+++ b/gradle/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
     "files.exclude": {
         "**/.gradle": true,
+        "**/.kotlin": true,
         "**/.vscode": true,
         "**/build": true,
     },
     "files.watcherExclude": {
         "**/.gradle": true,
+        "**/.kotlin": true,
         "**/.vscode": true,
         "**/build": true,
     },
