--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -25,7 +25,7 @@ prog = { path = "." }
 [package]
 name = "prog"
 version.workspace = true
-description = "Hello World program in Cargo"
+description = "Hello World program in Rust"
 license.workspace = true
 repository.workspace = true
 homepage.workspace = true
