--- a/haskell/packages/date-today/date-today.cabal
+++ b/haskell/packages/date-today/date-today.cabal
@@ -16,4 +16,4 @@ executable date-today
     ghc-options:      -Wall
     build-depends:
         base ^>=4.18.2.0,
-        cabal-hello:hello-world
+        haskell-hello:hello-world
