--- a/haskell/packages/hello-cabal/hello-world.cabal
+++ b/haskell/packages/hello-cabal/hello-world.cabal
@@ -7,7 +7,7 @@ source-repository head
     type:     git
     location: https://github.com/altersabeh/hello-world
 
-executable hello-cabal
+executable hello-haskell
     main-is:          Main.hs
     hs-source-dirs:   app
     other-modules:    Paths_hello_world
@@ -16,4 +16,4 @@ executable hello-cabal
     ghc-options:      -Wall
     build-depends:
         base ^>=4.18.2.0,
-        cabal-hello:hello-world
+        haskell-hello:hello-world
